# mybooksources

./: .gitignore  README.md
Chapter01/codes/: construct_complex_objects.cpp  test_auto_ptr.cpp  test_custom_foreach_loop.cpp  test_initializer_list.cpp  test_map_insert_or_assign.cpp  test_map_try_emplace.cpp  test_map_try_emplace_with_directobject.cpp  test_map_try_emplace_with_smartpointer.cpp  test_map_try_emplace_with_smartpointer2.cpp  test_shared_ptr_use_count.cpp  test_std_enable_shared_from_this.cpp  test_std_enable_shared_from_this_problem.cpp  test_unique_ptr.cpp  test_unique_ptr_deletor.cpp  test_unique_ptr_with_array.cpp  test_weak_ptr.cpp
Chapter02/: VisualGDB 下载与安装.md  cgdb下载与安装.md
Chapter02/codes/: main.cpp
Chapter03/code/: SharedMutex.cpp  SharedMutex.h  TaskPool.cpp  TaskPool.h  TestFiber.cpp  TestSharedMutexBenchmark.cpp  c11mutex.cpp  c11threadlocal.cpp  cpp11cv.cpp  cv.cpp  insecurecrtfunction.cpp  linuxtid.cpp  linuxtls.cpp  linuxtls2.cpp  makesurethread.cpp  makesurethreadgroup.cpp  rwlock.cpp  rwlock2.cpp  (+7 more)
Chapter06/code/SendMail/: CMakeLists.txt  MailMonitor.cpp  MailMonitor.h  Platform.h  SendMail.sln  SendMail.vcxproj  SendMail.vcxproj.filters  SmtpSocket.cpp  SmtpSocket.h  main.cpp
Chapter06/code/WebSocketServer/: CMakeLists.txt  README.md  WebSocketServer.sln  WebSocketServer.vcxproj  WebSocketServer.vcxproj.filters
Chapter06/code/WebSocketServer/appsrc/: BusinessSession.cpp  BusinessSession.h  main.cpp
Chapter06/code/WebSocketServer/base/: AsyncLog.cpp  AsyncLog.h
Chapter06/code/WebSocketServer/net/: EpollPoller.cpp  EventLoop.cpp  EventLoopThreadPool.cpp  Sockets.cpp  TcpConnection.cpp
Chapter06/code/WebSocketServer/utils/: DaemonRun.cpp  DaemonRun.h  StringUtil.cpp  StringUtil.h
Chapter06/code/WebSocketServer/websocketsrc/: MyWebSocketServer.cpp  MyWebSocketServer.h  MyWebSocketSession.cpp  MyWebSocketSession.h  WebSocketHandshake.h
Chapter06/code/WebSocketServer/zlib1.2.11/: ZlibUtil.cpp  ZlibUtil.h
(+126 files in other folders)
